Z-index-Bug-Mapas

--- a/Proyecto_G/css/style.css
+++ b/Proyecto_G/css/style.css
@@ -898,5 +898,5 @@ body.modo-dia {
 }
 
 .rectangleAtras{
-  z-index: -1
+  z-index: -1000
 }
